  that won't cause any issues, perhaps it even helps to fix some bugs...
- #0001740 reported by Trocotronic, making the IRCd send ERROR : to all
  links with possible reason for RESTART; like /die does it. [Backport, sts]
- Added set::ssl::server-cipher-list, #002368 requested by Beastie
  [Backport, sts]
- Added set::ssl::renegotiate-bytes, set::ssl:renegotiate-timeout, #0002971
  suggested by tabrisnet. Gets activated when >0. Please set sane values.
  [Backport, sts]
- #0002475 reported by aquanight on detecting \'s in module filenames on
  win32 and not do ./module for it [Backport]
- #0002172 reported by Stealth, patched by WolfSage, fixing if you have an
  admin block, and forget a semicolon on a line, Unreal will proceed to use
  the block with no error, but the information will be incorrect/incomplete.
  [Backport, WolfSage]
- #0002833 reported and patched by tabrisnet, implementing UHNAMES
  [Backport, only slightly modified for speed]
- #0001924 - requested by syzop: Added ./unreal gencloak, which generates
  random keys 10 ~ 20 characters in length (*NIX only). [Backport, aquanight]
- #0003313 reported by Stealth, regarding not erroring/warning when me::name
  is bigger than HOSTLEN, from now it will error on config read. [Backport, sts]
- /REHASH -all not case sensitive
- Win32 makefile: removed /MAPINFO:LINES, since visual studio 2005 and up
  don't support this and will fail to compile UnrealIRCd. This fixes #3680,
  reported by therock247uk.
- Upgraded c-ares to 1.6.0 (also now using pkg-config).
  If you get a "undefined reference to `clock_gettime'" error, then you
  might consider installing 'pkg-config' on your system, and then simply re-run
  ./Config and make, should fix things.
  TODO: testing! testing! i'd like to be sure this c-ares is stable!
- Win32 compile fixes.
- Upgraded c-ares on windows to 1.6.0 as well.
- Win32: build w/manifest. Looks like Unreal@Win32 now actually works again :).